<resources>
    <string name="app_name">MyTicket</string>
    <string name="slogan">Wisata Jadi Lebih Asyik!</string>
    <string name="signin">SIGN IN</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="bio_label">Bio</string>
    <string name="name_label">Name</string>
    <string name="explore">EXPLORE NOW</string>

    <string name="USERNAME_FILE">myusername</string>
    <string name="USERNAME_KEY">username</string>
    <string name="PASSWORD_KEY">password</string>
    <string name="EMAIL_KEY">email</string>

</resources>