<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_blue_primary"
    tools:context=".SignInAct">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="110dp"
        android:layout_marginTop="46dp"
        android:src="@drawable/applogowhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:background="@drawable/bg_cornered_8dp_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        android:paddingVertical="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp"
                android:text="@string/username_label"/>

            <EditText
                android:id="@+id/edt_username"
                android:background="@drawable/bg_input_gray_selector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="text"
                android:textColor="@color/blackPrimary"
                android:maxLines="1"
                android:paddingHorizontal="12dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/mlight"
                android:textColor="@color/grayPrimary"
                android:textSize="20sp"
                android:text="@string/password_label"/>

            <EditText
                android:id="@+id/edt_password"
                android:background="@drawable/bg_input_gray_selector"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:textColor="@color/blackPrimary"
                android:maxLines="1"
                android:paddingHorizontal="12dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnSignIn"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_cornered_8dp_blue"
            android:fontFamily="@font/mmedium"
            android:text="@string/signin"
            android:textColor="#FFF"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/btnNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/mlight"
        android:textSize="22sp"
        android:textColor="#FFF"
        android:text="Create New Account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>