<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".EditProfileAct">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bgPrimary"
        android:paddingBottom="24dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/bg_gradient_blue_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/mregular"
            android:text="Edit Profile"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="9dp"
            android:fontFamily="@font/mlight"
            android:text="We highly suggest you to \nuse correct informations"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_cornered_8dp_white"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view1"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:background="@drawable/bg_view_circle_picture"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/photoUser"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/pas_foto"
                    app:layout_constraintBottom_toBottomOf="@+id/view1"
                    app:layout_constraintEnd_toEndOf="@+id/view1"
                    app:layout_constraintStart_toStartOf="@+id/view1"
                    app:layout_constraintTop_toTopOf="@+id/view1" />

                <Button
                    android:id="@+id/btn_add_photo"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/mmedium"
                    android:textSize="28sp"
                    android:textColor="#FFF"
                    android:text="+"
                    android:background="@drawable/bg_circle_blue"
                    app:layout_constraintTop_toTopOf="@+id/view1"
                    app:layout_constraintEnd_toEndOf="@+id/view1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/name_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_gray_selector"
                    android:inputType="textPersonName"
                    android:maxLines="1"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/blackPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/bio_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_bio"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_gray_selector"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/blackPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/username_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_gray_selector"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/blackPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/password_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_gray_selector"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/blackPrimary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/email_label"
                    android:textColor="@color/grayPrimary"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_input_gray_selector"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingHorizontal="12dp"
                    android:textColor="@color/blackPrimary" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/bg_cornered_8dp_blue"
            android:fontFamily="@font/mmedium"
            android:text="SAVE"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toEndOf="@+id/btnBack"
            app:layout_constraintTop_toTopOf="@+id/btnBack" />

        <LinearLayout
            android:id="@+id/btnBack"
            android:layout_height="55dp"
            android:layout_width="90dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_cornered_8dp_white"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_back" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>